2009-04-16  Stephen Shaw  <sshaw@decriptor.com>

	* DatabaseBuilder.cs: Minor changes

	* SQLite.cs: Update methods and parameters

2009-04-16  Stephen Shaw  <sshaw@decriptor.com>

	* SQLite.cs: Make some updates to the methods and their
	  parameters. Converts bool to int.

2009-04-14  Stephen Shaw  <sshaw@decriptor.com>

	* SQLite.cs: Built out the rest of the methods for the major
	  functions for each of the tables

2009-04-04  Stephen Shaw  <sshaw@decriptor.com>

	* DatabaseBuilder.cs: Created this class to build a base setup
	  for the database. It doesn't autofill yet.

	* SQLite.cs: Extended out some of the database stuff. Split
	  the Media table into Books and Media.

2009-04-01  Stephen Shaw  <sshaw@decriptor.com>

	* SQLite.cs: Created the SQLite.cs file
	Added some basic patron info

	* ChangeLog: Initial ChangeLog
